--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script>
     window.$docsify = {
       name: '禹宁的技术文档',
-      repo: 'https://github.com/Snailclimb/JavaGuide-Interview',
+      repo: 'https://github.com/ivileey/technical',
       maxLevel: 5,//最大支持渲染的标题层级
       subMaxLevel: 3,
       homepage: 'README.md',
@@ -35,7 +35,7 @@
         depth: 3,
       },
       plugins: [
-        EditOnGithubPlugin.create('')
+        EditOnGithubPlugin.create('https://github.com/ivileey/technical')
       ],
     }
   </script>
